force-app/main/default/objects/Opportunity__c/fields/Job_Type_All__c.field-meta.xml
<CustomField>
    <fullName>Job_Type_All__c</fullName>
    <description>Internally used to allow full picklist regardless of LOB for VF/Custom Dev</description>
    <label>Job Type All</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activism Advisory</fullName>
            </value>
            <value>
                <fullName>Board Advisory Services (BAS)</fullName>
            </value>
            <value>
                <fullName>Buyside</fullName>
            </value>
            <value>
                <fullName>Buyside &amp; Financing Advisory</fullName>
            </value>
            <value>
                <fullName>Collateral Valuation</fullName>
            </value>
            <value>
                <fullName>Compensation/Formula Analysis</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Corporate Alliances</fullName>
            </value>
            <value>
                <fullName>Creditor Advisors</fullName>
            </value>
            <value>
                <fullName>CVAS - Forensic Services</fullName>
            </value>
            <value>
                <fullName>CVAS - FV Opinion</fullName>
            </value>
            <value>
                <fullName>CVAS - Goodwill or Asset Impairment</fullName>
            </value>
            <value>
                <fullName>CVAS - Pre-Acq Val&apos;n Cons</fullName>
            </value>
            <value>
                <fullName>CVAS - Purchase Price Allocation</fullName>
            </value>
            <value>
                <fullName>CVAS - SFAS 123R/409A Stock, Option Valuation</fullName>
            </value>
            <value>
                <fullName>CVAS - SFAS 133 Derivatives, Liabilities Valuation</fullName>
            </value>
            <value>
                <fullName>CVAS - Sovereign Advisory</fullName>
            </value>
            <value>
                <fullName>CVAS - Tangible Asset Valuation</fullName>
            </value>
            <value>
                <fullName>CVAS - Tax Valuation</fullName>
            </value>
            <value>
                <fullName>CVAS - Transfer Pricing</fullName>
            </value>
            <value>
                <fullName>Debt Advisory</fullName>
            </value>
            <value>
                <fullName>Debt Capital Markets</fullName>
            </value>
            <value>
                <fullName>Debtor Advisors</fullName>
            </value>
            <value>
                <fullName>Discretionary Advisory</fullName>
            </value>
            <value>
                <fullName>DM&amp;A Buyside</fullName>
            </value>
            <value>
                <fullName>DM&amp;A Sellside</fullName>
            </value>
            <value>
                <fullName>DRC - Ad Valorem Services</fullName>
            </value>
            <value>
                <fullName>DRC - Appointed Arbitrator/Mediator</fullName>
            </value>
            <value>
                <fullName>DRC - Contract Compliance</fullName>
            </value>
            <value>
                <fullName>DRC - Exp Cons-Arbitrat&apos;n</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>