force-app/main/default/objects/Opportunity__c/fields/Last_Opportunity_Comment_Any__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Comment_Any__c</fullName>
    <description>Last Opportunity Comment of Any Type (Including Admin)</description>
    <formula>Last_Opportunity_Comment_Any_Part_1__c + Last_Opportunity_Comment_Any_Part_2__c + Last_Opportunity_Comment_Any_Part_3__c + Last_Opportunity_Comment_Any_Part_4__c</formula>
    <label>Last Opportunity Comment</label>
    <type>Text</type>
</CustomField>