force-app/main/default/objects/Opportunity__c/fields/Last_Opportunity_Comment_Any_Part_3__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Comment_Any_Part_3__c</fullName>
    <description>Last Opportunity Comment of Any Type (Including Admin)</description>
    <label>Last Opportunity Comment Any Part 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>