force-app/main/default/objects/Opportunity__c/fields/Last_Opportunity_Comment_Part_2__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Comment_Part_2__c</fullName>
    <label>Last Opportunity Comment Part 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>