force-app/main/default/objects/Opportunity__c/fields/Last_Opportunity_Comment_PIPELINE__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Comment_PIPELINE__c</fullName>
    <formula>Last_Opportunity_Comment_Part_1__c +  Last_Opportunity_Comment_Part_2__c +  Last_Opportunity_Comment_Part_3__c +  Last_Opportunity_Comment_Part_4__c</formula>
    <label>Last Opportunity Comment</label>
    <type>Text</type>
</CustomField>