force-app/main/default/objects/Opportunity__c/fields/Latest_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Latest_Stage_Change__c</fullName>
    <label>Latest Stage Change</label>
    <type>Date</type>
</CustomField>