force-app/main/default/objects/Opportunity__c/fields/Legacy_CS_Division_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CS_Division_ID__c</fullName>
    <description>Used to track the division for the import of legacy capital source lists in which multiple lists (divisions) were entered for a single prospect.</description>
    <label>Legacy_CS_Division_ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>