force-app/main/default/objects/Opportunity__c/fields/Legacy_SLX_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SLX_ID__c</fullName>
    <externalId>true</externalId>
    <label>DealCloud_ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>