force-app/main/default/objects/Opportunity__c/fields/Legal_Cap__c.field-meta.xml
<CustomField>
    <fullName>Legal_Cap__c</fullName>
    <label>Legal Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>