force-app/main/default/objects/Opportunity__c/fields/Legal_Documents__c.field-meta.xml
<CustomField>
    <fullName>Legal_Documents__c</fullName>
    <description>URL to legal documents related to this opportunity</description>
    <label>Legal Documents</label>
    <type>Url</type>
</CustomField>