force-app/main/default/objects/Opportunity__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legal Entity lookup</description>
    <label>Legal Entity</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(2 AND 3) OR (4 AND 1)</booleanFilter>
        <filterItems>
            <field>Legal_Entity__c.Available_for_Project__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>HL Internal Opportunity</value>
        </filterItems>
        <filterItems>
            <field>Legal_Entity__c.Available_for_Internal_Project__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>HL Internal Opportunity</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>