force-app/main/default/objects/Opportunity__c/fields/Legal_Hold__c.field-meta.xml
<CustomField>
    <fullName>Legal_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Hold</label>
    <type>Checkbox</type>
</CustomField>