force-app/main/default/objects/Opportunity__c/fields/LegalAdvisorCompany__c.field-meta.xml
<CustomField>
    <fullName>LegalAdvisorCompany__c</fullName>
    <description>Opportunity Contact with Role = “Legal Advisor to Company/Debtor” is required. However, if the Opportunity does not have a contact to assign that role, then user will need to check the new field “No Legal Advisor to Company/Debtor” on the opportunity page, negating the requirement.</description>
    <inlineHelpText>If Yes, add the contacts under opp contacts and select the role Legal Advisor to Company/Debtor.</inlineHelpText>
    <label>Legal Advisor to Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>