force-app/main/default/objects/Opportunity__c/fields/LegalAdvisorCreditor__c.field-meta.xml
<CustomField>
    <fullName>LegalAdvisorCreditor__c</fullName>
    <description>Opportunity Contact with Role = “Legal Advisor to Creditor” and Opportunity Contact with Role as “Legal Advisor to Company/Debtor” are required depending on Job Type of the deal.</description>
    <inlineHelpText>If Yes, add the contacts under opp contacts and select the role Legal Advisor to Creditor.</inlineHelpText>
    <label>Legal Advisor to HL Client Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>