force-app/main/default/objects/Opportunity__c/fields/Loss_Pass_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Pass_Reason__c</fullName>
    <label>Loss/Pass Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost - Other Agent</fullName>
            </value>
            <value>
                <fullName>Lost - Did not use Agent</fullName>
            </value>
            <value>
                <fullName>PFG Decline - Strategy</fullName>
            </value>
            <value>
                <fullName>PFG Decline - Bandwidth</fullName>
            </value>
            <value>
                <fullName>PFG Decline - Performance</fullName>
            </value>
            <value>
                <fullName>PFG Decline - No Interest</fullName>
            </value>
            <value>
                <fullName>PFG Decline - Fund Structure</fullName>
            </value>
            <value>
                <fullName>PFG Decline - References</fullName>
            </value>
            <value>
                <fullName>PFG Decline - Conflict</fullName>
            </value>
            <value>
                <fullName>PFG Decline - Target for IFA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>