force-app/main/default/objects/Opportunity__c/fields/Lost_To__c.field-meta.xml
<CustomField>
    <fullName>Lost_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lost To</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Opportunities_C2</relationshipName>
    <type>Lookup</type>
</CustomField>