force-app/main/default/objects/Opportunity__c/fields/Marketing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Comments__c</fullName>
    <label>Marketing Comments</label>
    <type>TextArea</type>
</CustomField>