force-app/main/default/objects/Opportunity__c/fields/Max_Fee_M__c.field-meta.xml
<CustomField>
    <fullName>Max_Fee_M__c</fullName>
    <label>Max Fee ($M)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>