force-app/main/default/objects/Opportunity__c/fields/Min_Fee_M__c.field-meta.xml
<CustomField>
    <fullName>Min_Fee_M__c</fullName>
    <label>Min Fee ($M)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>