force-app/main/default/objects/Opportunity__c/fields/MNPI__c.field-meta.xml
<CustomField>
    <fullName>MNPI__c</fullName>
    <description>Material Non-Public Information</description>
    <inlineHelpText>If Yes, please click on the Restricted List button above.</inlineHelpText>
    <label>Does HL Have Material Non-Public Info?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>