force-app/main/default/objects/Opportunity__c/fields/My_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>My_Opportunity__c</fullName>
    <formula>IF(
(z_Admin_Intern_Aggregate_CHECK__c ||
z_Analyst_Aggregate_CHECK__c ||
z_Associate_Aggregate_CHECK__c ||
z_Final_Rev_Aggregate_CHECK__c ||
z_Initiator_Aggregate_CHECK__c ||
z_Manager_Aggregate_CHECK__c ||
z_Marketing_Aggregate_CHECK__c ||
z_NonRegistered_Aggregate_CHECK__c ||
z_PE_HF_Aggregate_CHECK__c ||
z_Prelim_Rev_Aggregate_CHECK__c ||
z_Pricing_Aggregate_CHECK__c ||
z_Principal_Aggregate_CHECK__c ||
z_Public_Aggregate_CHECK__c ||
z_Reviewer_Aggregate_CHECK__c ||
z_Seller_Aggregate_CHECK__c ||
z_Specialty_Aggregate_CHECK__c), TRUE, FALSE)</formula>
    <label>My Opportunity</label>
    <type>Checkbox</type>
</CustomField>