force-app/main/default/objects/Opportunity__c/fields/NBC_Approved__c.field-meta.xml
<CustomField>
    <fullName>NBC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NBC Approved</label>
    <type>Checkbox</type>
</CustomField>