force-app/main/default/objects/Opportunity__c/fields/One_Pager_Date__c.field-meta.xml
<CustomField>
    <fullName>One_Pager_Date__c</fullName>
    <label>One Pager Date</label>
    <type>Date</type>
</CustomField>