force-app/main/default/objects/Opportunity__c/fields/Opp_Name_Store__c.field-meta.xml
<CustomField>
    <fullName>Opp_Name_Store__c</fullName>
    <label>Opp Name Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>