force-app/main/default/objects/Opportunity__c/fields/Opportunity_Approved__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Approved__c</fullName>
    <label>Opportunity Approved</label>
    <summaryFilterItems>
        <field>Opportunity_Approval__c.Approved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Approval__c.Related_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>