force-app/main/default/objects/Opportunity__c/fields/Opportunity_Comments__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Comments__c</fullName>
    <label>Opportunity Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>