force-app/main/default/objects/Opportunity__c/fields/Opportunity_Review_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Review_Approval_Status__c</fullName>
    <label>Opportunity Review Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested To Group Head</fullName>
            </value>
            <value>
                <fullName>Submit To Committee</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>