force-app/main/default/objects/Opportunity__c/fields/Original_Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Subject_Name__c</fullName>
    <label>Previous Subject Name</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>