force-app/main/default/objects/Opportunity__c/fields/Other_Transaction_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Transaction_Type_Notes__c</fullName>
    <label>Other Transaction Type Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>