force-app/main/default/objects/Opportunity__c/fields/Parent_Sponsor_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sponsor_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the &apos;Parent Sponsor Company&apos; from the opportunity client.  This field is populated when the opportunity is created.</description>
    <label>Parent Sponsor Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Parent Sponsor Company)</relationshipLabel>
    <relationshipName>Sponsor_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>