force-app/main/default/objects/Opportunity__c/fields/Parent_Sponsor_Company_Id_From_Client__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sponsor_Company_Id_From_Client__c</fullName>
    <description>Retrieves the &apos;Parent Sponsor Company&apos; directly from the opportunity client.</description>
    <formula>Client__r.Parent_Sponsor_Company__c</formula>
    <label>Parent Sponsor Company Id From Client</label>
    <type>Text</type>
</CustomField>