force-app/main/default/objects/Opportunity__c/fields/Percentage_Retainer_Creditable__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Retainer_Creditable__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Percentage Retainer Creditable</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>