force-app/main/default/objects/Opportunity__c/fields/PFG_Resource__c.field-meta.xml
<CustomField>
    <fullName>PFG_Resource__c</fullName>
    <label>PFG Resource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>US / Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>