force-app/main/default/objects/Opportunity__c/fields/PIPELINE_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>PIPELINE_Job_Type__c</fullName>
    <description>FOR PIPELINE MANAGER ONLY</description>
    <formula>TEXT(Job_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Type</label>
    <type>Text</type>
</CustomField>