force-app/main/default/objects/Opportunity__c/fields/PIPELINE_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>PIPELINE_Opportunity_Number__c</fullName>
    <formula>Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>