force-app/main/default/objects/Opportunity__c/fields/Pitch_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Comments__c</fullName>
    <label>Pitch Comments</label>
    <type>TextArea</type>
</CustomField>