force-app/main/default/objects/Opportunity__c/fields/Pitch_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Email_Sent__c</fullName>
    <label>Pitch Email Sent</label>
    <type>Date</type>
</CustomField>