force-app/main/default/objects/Opportunity__c/fields/Pitch_Results__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Results__c</fullName>
    <label>Pitch Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Decision</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>