force-app/main/default/objects/Opportunity__c/fields/Primary_External_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_External_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary External Contact (updated via trigger)</description>
    <label>Primary External Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Primary External Contact)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>